--- a/api-def/uniwebviewsafebrowsing.toml
+++ b/api-def/uniwebviewsafebrowsing.toml
@@ -187,6 +187,299 @@ The color to tint the toolbar.
 """
 
 [[Methods]]
+name = "SetColorScheme"
+syntax = "SetColorScheme(ColorScheme colorScheme)"
+returnType = "void"
+summary = """
+Sets the Custom Tabs UI color scheme. Ignored after `Show`.
+
+Android only. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "colorScheme"
+type = "ColorScheme"
+summary = "The desired color scheme (`System`, `Light`, or `Dark`)."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "ChangeUrl"
+syntax = "ChangeUrl(string url)"
+returnType = "void"
+summary = """
+Changes the URL to be loaded before the tab is shown (useful for warmup/prefetch). Ignored after `Show`.
+
+Android only. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "url"
+type = "string"
+summary = "The URL to switch to before calling `Show`."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "SetSecondaryToolbarColor"
+syntax = "SetSecondaryToolbarColor(Color color)"
+returnType = "void"
+summary = """
+Sets the secondary/bottom toolbar color. Ignored after `Show`.
+
+Android only. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "color"
+type = "Color"
+summary = "Tint color for the secondary toolbar."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "SetNavigationBarColor"
+syntax = "SetNavigationBarColor(Color color)"
+returnType = "void"
+summary = """
+Sets the navigation bar color. Ignored after `Show`.
+
+Android only. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "color"
+type = "Color"
+summary = "Tint color for the navigation bar."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "SetNavigationBarDividerColor"
+syntax = "SetNavigationBarDividerColor(Color color)"
+returnType = "void"
+summary = """
+Sets the navigation bar divider color. Ignored after `Show`.
+
+Android only. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "color"
+type = "Color"
+summary = "Tint color for the divider."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "SetToolbarCornerRadiusDp"
+syntax = "SetToolbarCornerRadiusDp(int cornerRadiusDp)"
+returnType = "void"
+summary = """
+Sets the toolbar corner radius in dp for partial Custom Tabs. Ignored after `Show`.
+
+Android only. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "cornerRadiusDp"
+type = "int"
+summary = "Corner radius in density-independent pixels."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "SetInitialHeightPx"
+syntax = "SetInitialHeightPx(int initialHeightPx)"
+returnType = "void"
+summary = """
+Sets initial Custom Tab height in pixels for partial tabs. Ignored after `Show`.
+
+Android only. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "initialHeightPx"
+type = "int"
+summary = "Initial height in pixels."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "SetInitialWidthPx"
+syntax = "SetInitialWidthPx(int initialWidthPx)"
+returnType = "void"
+summary = """
+Sets initial Custom Tab width in pixels (side sheet). Ignored after `Show`.
+
+Android only. Requires AndroidX Browser 1.8.0+. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "initialWidthPx"
+type = "int"
+summary = "Initial width in pixels."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "SetShareMenuItemEnabled"
+syntax = "SetShareMenuItemEnabled(bool enable)"
+returnType = "void"
+summary = """
+Enables or disables share menu items. Ignored after `Show`.
+
+Android only. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "enable"
+type = "bool"
+summary = "Whether sharing buttons are enabled."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "SetUrlBarHidingEnabled"
+syntax = "SetUrlBarHidingEnabled(bool enable)"
+returnType = "void"
+summary = """
+Enables hiding the URL bar on scroll. Ignored after `Show`.
+
+Android only. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "enable"
+type = "bool"
+summary = "Whether the URL bar hides when scrolling."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "SetSendToExternalDefaultHandlerEnabled"
+syntax = "SetSendToExternalDefaultHandlerEnabled(bool enable)"
+returnType = "void"
+summary = """
+Sends redirects to the system default handler when enabled. Ignored after `Show`.
+
+Android only. Requires AndroidX Browser 1.7.0+. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "enable"
+type = "bool"
+summary = "Allow redirects to be handled externally."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "SetMaximizationEnabled"
+syntax = "SetMaximizationEnabled(bool enable)"
+returnType = "void"
+summary = """
+Toggles side-sheet maximization for partial Custom Tabs. Ignored after `Show`.
+
+Android only. Requires AndroidX Browser 1.8.0+. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "enable"
+type = "bool"
+summary = "Whether the maximization button is enabled."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "SetDownloadButtonEnabled"
+syntax = "SetDownloadButtonEnabled(bool enable)"
+returnType = "void"
+summary = """
+Enables or disables the download button in the overflow menu. Ignored after `Show`.
+
+Android only. Requires AndroidX Browser 1.7.0+. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "enable"
+type = "bool"
+summary = "Enable download button in overflow."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "SetBookmarksButtonEnabled"
+syntax = "SetBookmarksButtonEnabled(bool enable)"
+returnType = "void"
+summary = """
+Enables or disables the bookmarks button in the overflow menu. Ignored after `Show`.
+
+Android only. Requires AndroidX Browser 1.7.0+. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "enable"
+type = "bool"
+summary = "Enable bookmarks button in overflow."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "SetBackgroundInteractionEnabled"
+syntax = "SetBackgroundInteractionEnabled(bool enable)"
+returnType = "void"
+summary = """
+Allows interaction with background apps when a partial Custom Tab is shown. Ignored after `Show`.
+
+Android only. Requires AndroidX Browser 1.7.0+. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "enable"
+type = "bool"
+summary = "Allow background interaction while partial tab is visible."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "SetWarmup"
+syntax = "SetWarmup(bool enable)"
+returnType = "void"
+summary = """
+Warms up the Custom Tabs provider process to speed up later loads. Can be called multiple times. Ignored after `Show`.
+
+Android only. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "enable"
+type = "bool"
+summary = "Whether to warm up the provider."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
+name = "SetPrefetch"
+syntax = "SetPrefetch(bool enable, string alternativeUrl = null)"
+returnType = "void"
+summary = """
+Uses Custom Tabs prefetch (`mayLaunchUrl`) before showing the tab. Ignored after `Show`.
+
+Android only. This method does nothing on iOS.
+"""
+[[Methods.parameters]]
+name = "enable"
+type = "bool"
+summary = "Enable or disable prefetch."
+[[Methods.parameters]]
+name = "alternativeUrl"
+type = "string"
+summary = "Optional URL to prefetch instead of the current one."
+[[Methods.badges]]
+name = "Android"
+color = "green"
+
+[[Methods]]
 name = "SetToolbarItemColor"
 syntax = "SetToolbarItemColor(Color color)"
 returnType = "void"
